--- a/Tdf.CourseArrangment/Tdf.CourseArrangment.csproj
+++ b/Tdf.CourseArrangment/Tdf.CourseArrangment.csproj
@@ -43,11 +43,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class.cs" />
+    <Compile Include="ClassTime.cs" />
+    <Compile Include="Course.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Room.cs" />
+    <Compile Include="RoomTime.cs" />
+    <Compile Include="Rule.cs" />
+    <Compile Include="Student.cs" />
+    <Compile Include="StudentTime.cs" />
+    <Compile Include="Teacher.cs" />
+    <Compile Include="TeacherTime.cs" />
+    <Compile Include="TeachingPlan.cs" />
+    <Compile Include="TeachingTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
